--- a/src/assets/form.style.css
+++ b/src/assets/form.style.css
@@ -145,7 +145,7 @@ body {
   transform: translateY(-2px);
 }
 
-.error-msg {
+.msg {
     margin: 30px 0 0 0;
     color: var(--primary-red);
     text-align: center;
